feat: user command handlers refactor to use identity service
